--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-bower": "0.0.7",
     "gulp-minify-css": "^0.3.11",
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
