--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-bower": "0.0.7",
+    "gulp-imagemin": "^2.0.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
-    "gulp-zip": "^2.0.2"
+    "gulp-zip": "^2.0.2",
+    "imagemin-pngquant": "^4.0.0"
   }
 }
