--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
     "gulp-zip": "^2.0.2",
-    "imagemin-pngquant": "^4.0.0"
+    "imagemin-pngquant": "^4.0.0",
+    "protractor": "^1.5.0"
   }
 }
