--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-bower": "0.0.7",
     "gulp-imagemin": "^2.0.0",
     "gulp-minify-css": "^0.3.11",
+    "gulp-protractor": "0.0.11",
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
     "gulp-zip": "^2.0.2",
