--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-bower": "0.0.7",
+    "gulp-concat": "^2.4.2",
     "gulp-imagemin": "^2.0.0",
     "gulp-minify-css": "^0.3.11",
+    "gulp-template": "^1.1.1",
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
     "gulp-zip": "^2.0.2",
