--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-concat": "^2.4.2",
     "gulp-imagemin": "^2.0.0",
     "gulp-minify-css": "^0.3.11",
+    "gulp-run": "^1.6.4",
     "gulp-template": "^1.1.1",
     "gulp-uglify": "^1.0.2",
     "gulp-webserver": "^0.8.8",
