--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "package",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-karma": "0.0.4"
+  },
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-bower": "0.0.7",
@@ -14,6 +16,14 @@
     "gulp-webserver": "^0.8.8",
     "gulp-zip": "^2.0.2",
     "imagemin-pngquant": "^4.0.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-html-reporter": "^0.2.4",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
     "protractor": "^1.5.0"
   }
 }
